--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                         
                         <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 mix web-design">
                             <div class="project">
-                                <img src="images/portfolio/thumbs/image_2.jpg" alt="">
+                                <img src="images/portfolio/thumbs/image_2.JPG" alt="">
                                 <div class="ovrly">
                                 </div>
                                 <div class="buttons">
@@ -650,7 +650,7 @@
                         <!-- Popup Content -->
                         
                         <div class="pop-up-box" id="portfolio-2">
-                            <img alt="" src="images/portfolio/image_2.jpg" class=" hidden-xs">
+                            <img alt="" src="images/portfolio/image_2.JPG" class=" hidden-xs">
                             <div class="popup-content">
                                 <h3>EDU ASSIST</h3>
                                 <p>
