Update and rename eduassist.html to EduAssist.html

--- a/EduAssist.html
+++ b/EduAssist.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
     <link rel="stylesheet" href="fonts/ionicons.min.css">
     <link rel="stylesheet" href="css/Contact-Form-Clean.css">
-    <link rel="stylesheet" href="css/Footer-Clean.css">
     <link rel="stylesheet" href="css/Header-Blue.css">
     <link rel="stylesheet" href="css/styles.css">
     <style>
@@ -34,9 +33,9 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav">
-                            <li class="active" role="presentation" style="/*color:white;*/"><a href="#">DinnerCall </a></li>
+                            <li class="active" role="presentation" style="/*color:white;*/"><a href="dinnercall.html">DinnerCall </a></li>
                             <li class="active" role="presentation"><a href="#">EduAssist </a></li>
-                            <li class="active" role="presentation"><a href="#">MusicalMoods </a></li>
+                            <li class="active" role="presentation"><a href="musicalmoods.html">MusicalMoods </a></li>
                         </ul>
                     </div>
                 </div>
