--- a/EduAssist.html
+++ b/EduAssist.html
@@ -33,9 +33,9 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav">
-                            <li class="active" role="presentation" style="/*color:white;*/"><a href="dinnercall.html">DinnerCall </a></li>
+                            <li class="" role="presentation"><a style="color: white;" href="dinnercall.html">DinnerCall </a></li>
                             <li class="active" role="presentation"><a href="#">EduAssist </a></li>
-                            <li class="active" role="presentation"><a href="musicalmoods.html">MusicalMoods </a></li>
+                            <li class="" role="presentation"><a href="musicalmoods.html">MusicalMoods </a></li>
                         </ul>
                     </div>
                 </div>
