--- a/dinnercall.html
+++ b/dinnercall.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DinnerCall</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
     <link rel="stylesheet" href="fonts/ionicons.min.css">
     <link rel="stylesheet" href="css/Contact-Form-Clean.css">
     <link rel="stylesheet" href="css/Footer-Clean.css">
@@ -35,9 +35,9 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav">
-                            <li class="active" role="presentation" style="/*color:white;*/"><a href="#">DinnerCall </a></li>
-                            <li class="active" role="presentation"><a href="#">EduAssist </a></li>
-                            <li class="active" role="presentation"><a href="#">MusicalMoods </a></li>
+                            <li class="active" role="presentation" ><a href="#">DinnerCall </a></li>
+                            <li class="" role="presentation"><a href="EduAssist.html">EduAssist </a></li>
+                            <li class="" role="presentation"><a href="musicalmoods.html">MusicalMoods </a></li>
                         </ul>
                     </div>
                 </div>
