--- a/musicalmoods.html
+++ b/musicalmoods.html
@@ -34,8 +34,8 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav">
-                            <li class="active" role="presentation" style="/*color:white;*/"><a href="#">DinnerCall </a></li>
-                            <li class="active" role="presentation"><a href="#">EduAssist </a></li>
+                            <li class="" role="presentation" style="/*color:white;*/"><a href="dinnercall.html">DinnerCall </a></li>
+                            <li class="" role="presentation"><a href="EduAssist.html">EduAssist </a></li>
                             <li class="active" role="presentation"><a href="#">MusicalMoods </a></li>
                         </ul>
                     </div>
