--- a/musicalmoods.html
+++ b/musicalmoods.html
@@ -280,7 +280,7 @@
                 <p>We created sketches and Balsamiq Wireframes for the idea: </p>
                 <div class="carousel slide" data-ride="carousel" id="carousel-3">
                     <div class="carousel-inner" role="listbox">
-                        <div class="item active"><img src="Projects/MusicalMoods/Folder_4/1.JPG" alt="Slide Image"></div>
+                         <div class="item active"><img src="Projects/MusicalMoods/Folder_4/1.JPG" alt="Slide Image"></div>
                         <div class="item"><img src="Projects/MusicalMoods/Folder_4/2.JPG" alt="Slide Image"></div>
                         <div class="item"><img src="Projects/MusicalMoods/Folder_4/3.JPG" alt="Slide Image"></div>
                         <div class="item"><img src="Projects/MusicalMoods/Folder_4/4.JPG" alt="Slide Image"></div>
@@ -297,7 +297,7 @@
             </div>
         </div>
     </div>
-    <div class="footer-clean">
+    <div class="footer-clean hidden">
         <footer>
             <div class="container">
                 <div class="row">
