--- a/dinnercall.html
+++ b/dinnercall.html
@@ -228,7 +228,7 @@
             </div>
         </div>
     </div>
-    <div class="footer-clean">
+    <div class="footer-clean hidden">
         <footer>
             <div class="container">
                 <div class="row">
