--- a/dinnercall.html
+++ b/dinnercall.html
@@ -186,7 +186,9 @@
             <div class="col-sm-10 col-sm-offset-1">
                 <p>Based on our research and contextual inquiries, we developed our persona, Alice Shah. Throughout the rest of the project, we focused our design designs based on how Alice would react to them.&nbsp; </p>
                 <div class="row">
-                    <div class="col-sm-5"></div>
+                    <div class="col-sm-5">
+                        <img src="Projects/Dinnercall/persona.jpg">
+                    </div>
                     <div class="col-sm-7">
                         <p><strong>Our Persona:</strong> Lucy Lane </p>
                         <p><strong>Residence:</strong> NYC, USA </p>
