--- a/dinnercall.html
+++ b/dinnercall.html
@@ -223,7 +223,7 @@
             <div class="col-md-12">
                 <h2 class="text-center">Key Learnings</h2></div>
         </div>
-        <div class="row">
+        <div class="row" style="padding-bottom:50px;">
             <div class="col-sm-10 col-sm-offset-1">
                 <p><strong>Main take away from this experience:</strong> This project was a 5-month project. Keeping in touch with Akram and working under a client was a one of the highlights of this project. Handling the client’s needs and making the application
                     user friendly were major learnings of this project. </p>
