--- a/EduAssist.html
+++ b/EduAssist.html
@@ -539,7 +539,7 @@
             <div class="col-md-12">
                 <h2 class="text-center">Key Learnings</h2></div>
         </div>
-        <div class="row">
+        <div class="row" style="padding-bottom: 50px;">
             <div class="col-sm-10 col-sm-offset-1">
                 <p><strong>Main take away from this experience:</strong> Having a lot of features from the get-go complicates the solution. If the main features are designed and implemented first, then they are built upon, then in the end the app’s design
                     would be more stable than the approach I followed. Keeping this in mind, I will approach the next project in a more methodical manner. </p>
