--- a/musicalmoods.html
+++ b/musicalmoods.html
@@ -275,7 +275,7 @@
             <div class="col-md-12">
                 <h2 class="text-center">Wireframes </h2></div>
         </div>
-        <div class="row">
+        <div class="row" style="padding-bottom: 50px;" >
             <div class="col-sm-10 col-sm-offset-1">
                 <p>We created sketches and Balsamiq Wireframes for the idea: </p>
                 <div class="carousel slide" data-ride="carousel" id="carousel-3">
