--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             
             <!--( C ) Skills Section -->
             
-            <div class="skills clearfix ">
+            <div class="skills clearfix hidden">
                 <h2 class="small-heading">SKILLS</h2>
                 <div class="clearfix">
                     <div class="skill-container col-sm-4">
