--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="col-sm-10">
                     <h2>RE<span>S</span>UME</h2>
-                    <h3>Something about my experience and skills.</h3>
+                    <h3>My experience and skills.</h3>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-sm-10">
                     <h2>PORT<span>F</span>OLIO</h2>
-                    <h3>Have a spoon of my work.</h3>
+                    <h3>Have a look at my work.</h3>
                 </div>
             </div>
         </div>
@@ -948,7 +948,7 @@
 
         <!--( C ) Google Map -->
 
-        <div class="google-map" id="google-map"></div>
+        <div class="google-map hidden" id="google-map"></div>
 
         <!-- ( D ) Footer -->
 
