--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
@@ -197,20 +196,29 @@
                 <div class="story-content clearfix">
                     <img alt="" src="images/dp.jpg" class="col-xs-offset-1 col-sm-offset-0 col-sm-4 col-xs-10">
                     <div class="col-sm-8 col-xs-12">
-                        <h3>Hi! I'm Swapnil</h3>
+                        <h3>Hi! I'm a UX Designer.</h3>
                         <p>
-                            I am a UX Designer, currently pursuing a graduate degree in Human Computer Interaction at IUPUI.
+                            I am interested in sketching and designing anything – everything!
                         </p>
                         <p>
-                            I am currently looking for internship opportunities in the field of UX.
+                            I am Swapnil Chandra and I am an HCI graduate student at IUPUI and I hold an undergraduate degree in Computer Science that enables me to think creatively but in the domains of what is possible.
                         </p>
 
                         <p>
-                            I love to design and sketch my ideas. Do check out my resume to find more details about my professional experience.
+                            I believe in pushing the boundaries of the box to find the best solution rather than only thinking outside the box. With this mindset, a strong logical and creative outlook I strive to design software in a way that will reach out and delight every person who interacts with it.
+                        </p>
+                        <p>
+                            My first approach to any problem is: Pencil and Paper. I enjoy sketching and putting my thoughts on paper to get the required solution till I finalize it. With my logic, my strong knowledge and skillset I have built through my graduate and undergraduate courses, I wish to grow and gain as much exposure as possible to become a better designer. I aim to build a connection between technology and people.
+                        </p>
+                        <p>
+                            If my skillset is what you are looking for, call me up (314-201-0701) or drop me an email (swapchan@iupui.edu).
                         </p>
                         <a target="_blank" href="Assests/SwapnilChandra-Resume.pdf">Resume</a>
                     </div>
                 </div>
+            </div>
+            <div class="col-sm-4 col-sm-offset-4 text-center" style="position: relative; bottom: 0px">
+                <i class="fa fa-chevron-circle-down fa-4x" aria-hidden="true"></i>
             </div>
         </div>
 
@@ -218,62 +226,106 @@
 
         <div class="services-container clearfix">
             <h2 class="small-heading">WHAT CAN I DO?</h2>
-            <div class="services col-lg-4 col-md-6 col-sm-4">
-                <i class="fa fa-eyedropper"></i>
-                <h3>UX DESIGN</h3>
-                <p>
-                    I am a graduate student in IUPUI enrolled in Human Computer Interaction.
-                </p>
+            <div class="services col-lg-12 col-md-12 col-sm-12" style="height: 210px;">
+                <div class="col-lg-4">
+                    <i class="fa fa-user"></i>
+                    <h3>User centered thinking</h3></div>
+                <div class="col-lg-8" style="line-height: 105px;">
+                    <p style="text-align: left; display: inline-block; vertical-align: middle; line-height: normal;">
+                        Throughout my childhood, I enjoyed teaching and helping my mother whenever she needed guidance while she used her mobile. While I helped, I studied her, how she thought, what she would have liked. This led me to think about how I could change the interface of the software easier to use without changing its features. This became my passion, thinking about creating easier ways to interact with technology for all users (not just computer engineers like me!)
+                    </p>
+                </div>
             </div>
 
             <!-- Single Service Item [ END ]  -->
 
-            <div class="services col-lg-4 col-md-6 col-sm-4">
-                <i class="fa fa-eye"></i>
-                <h3>UX RESEARCH</h3>
-                <p>
-                    My graduate degree in HCI has given me many opportunities to conduct user studies and evaluations
-                </p>
+            <div class="services col-lg-12 col-md-12 col-sm-12" style="height: 210px;">
+                <div class="col-lg-4">
+                    <i class="fa fa-microphone"></i>
+                    <h3>Story-telling</h3></div>
+                <div class="col-lg-8" style="line-height: 105px;">
+                    <p style="text-align: left; display: inline-block; vertical-align: middle; line-height: normal;">
+                        As you will notice, just like my second-grade English teacher, I love narrating stories! This indirectly gives me a strong hold on personas, allowing me to easily imagine a “somebody” to represent a target audience!
+                    </p>
+                </div>
             </div>
 
             <!-- Single Service Item [ END ]  -->
 
-            <div class="services col-lg-4 col-md-6 col-sm-4">
-                <i class="fa fa-code"></i>
-                <h3>DEVELOPMENT</h3>
-                <p>
-                    I can code in languages like C/C++, Java.
-                </p>
+            <div class="services col-lg-12 col-md-12 col-sm-12" style="height: 210px;">
+                <div class="col-lg-4">
+                    <i class="fa fa-puzzle-piece"></i>
+                    <h3>Logical thinking</h3></div>
+                <div class="col-lg-8" style="line-height: 105px;">
+                    <p style="text-align: left; display: inline-block; vertical-align: middle; line-height: normal;">
+                        I loved doing Sudoku with my grandfather since my 3rd grade. This gradually built in me, a strong logical thinking approach!
+                    </p>
+                </div>
             </div>
 
             <!-- Single Service Item [ END ]  -->
 
-            <div class="services col-lg-4 col-md-6 col-sm-4">
-                <i class="fa fa-pencil"></i>
-                <h3>SKETCHING</h3>
-                <p>
-                    I love to sketch out my ideas before getting too serious about them.
-                </p>
+            <div class="services col-lg-12 col-md-12 col-sm-12" style="height: 210px;">
+                <div class="col-lg-4">
+                    <i class="fa fa-bolt"></i>
+                    <h3>Quick grasping ability</h3></div>
+                <div class="col-lg-8" style="line-height: 105px;">
+                    <p style="text-align: left; display: inline-block; vertical-align: middle; line-height: normal;">
+                        Trying out new things has always been my aim in life. I have tried and quickly learnt many skills ranging from guitar and sketching to karate and public speaking. I believe in being – Jack of all trades, master of ONE.
+                    </p>
+                </div>
             </div>
 
             <!-- Single Service Item [ END ]  -->
 
-            <div class="services col-lg-4 col-md-6 col-sm-4">
-                <i class="fa fa-rocket"></i>
-                <h3>MULTI TASK</h3>
-                <p>
-                    I have experience working on multiple project at the same time, giving them all the same amount of attention.
-                </p>
+            <div class="services col-lg-12 col-md-12 col-sm-12" style="height: 210px;">
+                <div class="col-lg-4">
+                    <i class="fa fa-pencil-square-o"></i>
+                    <h3>Sketching/Prototyping</h3></div>
+                <div class="col-lg-8" style="line-height: 105px;">
+                    <p style="text-align: left; display: inline-block; vertical-align: middle; line-height: normal;">
+                        The first thing I do if I have an idea is to sketch it out. Penning an idea and then building it from scratch on it provides me with a satisfaction that I have covered all areas of that idea and gives me room to think about more.
+                    </p>
+                </div>
             </div>
 
             <!-- Single Service Item [ END ]  -->
 
-            <div class="services col-lg-4 col-md-6 col-sm-4">
-                <i class="fa fa-user"></i>
-                <h3>USER CENTERED THINKING</h3>
-                <p>
-                    I like talking to the users, understanding them and then think like them.
-                </p>
+            <div class="services col-lg-12 col-md-12 col-sm-12" style="height: 210px;">
+                <div class="col-lg-4">
+                    <i class="fa fa-users"></i>
+                    <h3>UX design + UX research</h3></div>
+                <div class="col-lg-8" style="line-height: 105px;">
+                    <p style="text-align: left; display: inline-block; vertical-align: middle; line-height: normal;">
+                        I truly believe in the UX design life cycle – Empathize to Test. I crave to contribute in each phase and dedicate myself to a product from the start to the finish. User-centered thinking gives me strong passion for UX research and a desire to sketch provides me with the passion for UX design. Therefore, I consider myself an all-rounder in this field.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Single Service Item [ END ]  -->
+
+            <div class="services col-lg-12 col-md-12 col-sm-12" style="height: 210px;">
+                <div class="col-lg-4">
+                    <i class="fa fa-code-fork"></i>
+                    <h3>Development</h3></div>
+                <div class="col-lg-8" style="line-height: 105px;">
+                    <p style="text-align: left; display: inline-block; vertical-align: middle; line-height: normal;">
+                        Development has logic, therefore I chose to pursue Computer Science as my undergraduate. 4 years of CS, taught me JAVA and C++ and many other languages and it gave me the foundation to learn new ones. This allows me to understand a developer and talk in their language and not design irrationally.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Single Service Item [ END ]  -->
+
+            <div class="services col-lg-12 col-md-12 col-sm-12" style="height: 210px;">
+                <div class="col-lg-4">
+                    <i class="fa fa-eye"></i>
+                    <h3>Critiquing</h3></div>
+                <div class="col-lg-8" style="line-height: 105px;">
+                    <p style="text-align: left; display: inline-block; vertical-align: middle; line-height: normal;">
+                        Critiquing is not only fault finding for me. For me it means that the product is already well built, it just needs the “X”- factor. Give me some time and I will find that X-Factor for the product.
+                    </p>
+                </div>
             </div>
 
             <!-- Single Service Item [ END ]  -->
@@ -335,7 +387,7 @@
         <!--show button on mobile resolution-->
         <!--<button class="col-xs-6 col-xs-offset-3 hidden-md hidden-lg btn"  style="margin: 100px">Download Resume</button>-->
         <div class="hidden-md hidden-lg">
-        <a id="button" target="_blank" href="Assests/SwapnilChandra-Resume.pdf">Resume</a>
+            <a id="button" target="_blank" href="Assests/SwapnilChandra-Resume.pdf">Resume</a>
         </div>
 
         <!--( A ) Education Section -->
@@ -905,13 +957,13 @@
         -->
             <!-- Single Contact Details Item [ END ] -->
 
-           <!-- <div class="contact col-sm-4">
-                <p>
-                    <i class="fa fa-envelope"></i><br>
-                    schandra.gem@gmail.com
-                </p>
-            </div>
-            -->
+            <!-- <div class="contact col-sm-4">
+                 <p>
+                     <i class="fa fa-envelope"></i><br>
+                     schandra.gem@gmail.com
+                 </p>
+             </div>
+             -->
             <!-- Single Contact Details Item [ END ] -->
 
             <div class="contact col-sm-4">
@@ -965,13 +1017,13 @@
 9 ) Javascript
 =============-->
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-92259171-1', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-92259171-1', 'auto');
+    ga('send', 'pageview');
 
 </script>
 <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
