--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <img alt="" src="images/menu/profile_btn.jpg">
             <div class="mask">
             </div>
-            <div class="heading col-xs-11 col-xs-offset-1">
+            <div class="heading col-xs-9 col-xs-offset-3">
                 <div class="col-xs-2 hidden-xs">
                     <i class="fa fa-user"></i>
                 </div>
@@ -111,7 +111,7 @@
             <img alt="" src="images/menu/resume_btn.jpg">
             <div class="mask">
             </div>
-            <div class="heading col-xs-11 col-xs-offset-1">
+            <div class="heading col-xs-9 col-xs-offset-3">
                 <div class="col-xs-2 hidden-xs">
                     <i class="fa fa-graduation-cap"></i>
                 </div>
@@ -128,7 +128,7 @@
             <img alt="" src="images/menu/portfolio_btn.jpg">
             <div class="mask">
             </div>
-            <div class="heading col-xs-11 col-xs-offset-1">
+            <div class="heading col-xs-9 col-xs-offset-3">
                 <div class="col-xs-2 hidden-xs">
                     <i class="fa fa-briefcase"></i>
                 </div>
@@ -145,7 +145,7 @@
             <img alt="" src="images/menu/contact_btn.jpg">
             <div class="mask">
             </div>
-            <div class="heading col-xs-11 col-xs-offset-1">
+            <div class="heading col-xs-9 col-xs-offset-3">
                 <div class="col-xs-2 hidden-xs">
                     <i class="fa fa-envelope-o"></i>
                 </div>
@@ -858,7 +858,7 @@
 
         <div>
             <h2 class="small-heading">SAY HELLO!</h2>
-
+                <h3 class="text-center">Do you like my portfolio? Contact me for more details.</h3>
             <div class="contact-form col-sm-11 clearfix hidden">
 
                 <form action="php/contact.php" id="contactForm" method="post" name="contactForm">
