--- a/EduAssist.html
+++ b/EduAssist.html
@@ -25,17 +25,17 @@
 
 <body>
     <div>
-        <div class="header-blue">
+        <div class="header-blue" style="background-color: #75a7d8;">
             <nav class="navbar navbar-default navigation-clean-search">
                 <div class="container">
                     <div class="navbar-header"><a class="navbar-brand navbar-link" href="index.html">Swapnil Chandra</a>
                         <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                     </div>
-                    <div class="collapse navbar-collapse" id="navcol-1">
+                    <div class="collapse navbar-collapse pull-right" id="navcol-1">
                         <ul class="nav navbar-nav">
                             <li class="" role="presentation"><a style="color: white;" href="dinnercall.html">DinnerCall </a></li>
-                            <li class="active" role="presentation"><a href="#">EduAssist </a></li>
-                            <li class="" role="presentation"><a href="musicalmoods.html">MusicalMoods </a></li>
+                            <li class="active" role="presentation" style="background-color: darkblue;border-radius: 5px;"><a href="#" style="color: white;">EduAssist </a></li>
+                            <li class="" role="presentation"><a style="color: white;" href="musicalmoods.html">MusicalMoods </a></li>
                         </ul>
                     </div>
                 </div>
@@ -322,10 +322,10 @@
                 <p>Sketches: </p>
                 <div class="carousel slide" data-ride="carousel" id="carousel-2">
                     <div class="carousel-inner" role="listbox">
-                        <div class="item active"><img style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Sketches/1.JPG" alt="Slide Image"></div>
-                        <div class="item"><img style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Sketches/2.JPG" alt="Slide Image"></div>
-                        <div class="item"><img style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Sketches/3.JPG" alt="Slide Image"></div>
-                        <div class="item"><img style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Sketches/4.JPG" alt="Slide Image"></div>
+                        <div class="item active"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Sketches/1.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Sketches/2.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Sketches/3.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Sketches/4.JPG" alt="Slide Image"></div>
                     </div>
                     <div><a class="left carousel-control" href="#carousel-2" role="button" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-2" role="button"
                         data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">Next</span></a></div>
@@ -341,18 +341,18 @@
                 <p>Low-Fidelity Prototype: </p>
                 <div class="carousel slide" data-ride="carousel" id="carousel-3">
                     <div class="carousel-inner" role="listbox">
-                        <div class="item active"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/1%20Login.png" alt="Slide Image"></div>
-                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/2%20Sign%20up.png" alt="Slide Image"></div>
-                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/3%20Onboarding%20-%20university.png" alt="Slide Image"></div>
-                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/4%20Onboarding%20-%20Topics.png" alt="Slide Image"></div>
-                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/5%20Add%20about%20you.png" alt="Slide Image"></div>
-                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/6%20Add%20topics%20you%20know.png" alt="Slide Image"></div>
-                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/7%20Topics%20Selected.png" alt="Slide Image"></div>
-                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/8%20Home%20-%20Feed.png" alt="Slide Image"></div>
-                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/9%20Home%20-%20Feed%20after%20Favorite.png" alt="Slide Image"></div>
-                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/10%20User%20Profile.png" alt="Slide Image"></div>
-                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/11%20User%20Profile%20-%20filter%20posts.png" alt="Slide Image"></div>
-                        <div class="item"><img width="50%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/12%20Message%20Chat.png" alt="Slide Image"></div>
+                        <div class="item active"><img width="30%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/1%20Login.png" alt="Slide Image"></div>
+                        <div class="item"><img width="30%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/2%20Sign%20up.png" alt="Slide Image"></div>
+                        <div class="item"><img width="30%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/3%20Onboarding%20-%20university.png" alt="Slide Image"></div>
+                        <div class="item"><img width="30%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/4%20Onboarding%20-%20Topics.png" alt="Slide Image"></div>
+                        <div class="item"><img width="30%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/5%20Add%20about%20you.png" alt="Slide Image"></div>
+                        <div class="item"><img width="30%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/6%20Add%20topics%20you%20know.png" alt="Slide Image"></div>
+                        <div class="item"><img width="30%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/7%20Topics%20Selected.png" alt="Slide Image"></div>
+                        <div class="item"><img width="30%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/8%20Home%20-%20Feed.png" alt="Slide Image"></div>
+                        <div class="item"><img width="30%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/9%20Home%20-%20Feed%20after%20Favorite.png" alt="Slide Image"></div>
+                        <div class="item"><img width="30%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/10%20User%20Profile.png" alt="Slide Image"></div>
+                        <div class="item"><img width="30%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/11%20User%20Profile%20-%20filter%20posts.png" alt="Slide Image"></div>
+                        <div class="item"><img width="30%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Lo_fi/12%20Message%20Chat.png" alt="Slide Image"></div>
                     </div>
                     <div><a class="left carousel-control" href="#carousel-3" role="button" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-3" role="button"
                         data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">Next</span></a></div>
@@ -372,29 +372,29 @@
                     </ol>
                 </div>
             </div>
-            <div class="col-sm-8 col-sm-offset-2">
+            <div class="col-sm-8 col-sm-offset-2 hidden">
                 <p>High-Fidelity Prototype: </p>
                 <div class="carousel slide" data-ride="carousel" id="carousel-4">
                     <div class="carousel-inner" role="listbox">
-                        <div class="item active"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/5.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/6.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/7.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/8.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/9.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/10.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/11.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/12.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/13.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/14.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/15.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/16.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/17.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/18.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/19.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/20.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/21.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/22.JPG" alt="Slide Image"></div>
-                        <div class="item"><img width="60%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/23.JPG" alt="Slide Image"></div>
+                        <div class="item active"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/5.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/6.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/7.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/8.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/9.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/10.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/11.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/12.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/13.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/14.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/15.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/16.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/17.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/18.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/19.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/20.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/21.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/22.JPG" alt="Slide Image"></div>
+                        <div class="item"><img width="40%" style="margin-left: auto; margin-right: auto;" src="Projects/Edu-Assist/Folder_3/Hi_fi/23.JPG" alt="Slide Image"></div>
                     </div>
                     <div><a class="left carousel-control" href="#carousel-4" role="button" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-4" role="button"
                         data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">Next</span></a></div>
