--- a/dinnercall.html
+++ b/dinnercall.html
@@ -27,17 +27,17 @@
 
 <body>
     <div>
-        <div class="header-blue">
+        <div class="header-blue" style="background-color: indianred">
             <nav class="navbar navbar-default navigation-clean-search">
                 <div class="container">
                     <div class="navbar-header"><a class="navbar-brand navbar-link" href="index.html">Swapnil Chandra</a>
                         <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                     </div>
-                    <div class="collapse navbar-collapse" id="navcol-1">
+                    <div class="collapse navbar-collapse pull-right" id="navcol-1">
                         <ul class="nav navbar-nav">
-                            <li class="active" role="presentation" ><a href="#">DinnerCall </a></li>
-                            <li class="" role="presentation"><a href="EduAssist.html">EduAssist </a></li>
-                            <li class="" role="presentation"><a href="musicalmoods.html">MusicalMoods </a></li>
+                            <li class="active" role="presentation" style="background: darkred;border-radius: 5px;"><a style="color: white;" href="#">DinnerCall </a></li>
+                            <li class="" role="presentation"><a style="color: white;" href="EduAssist.html">EduAssist </a></li>
+                            <li class="" role="presentation"><a style="color: white;" href="musicalmoods.html">MusicalMoods </a></li>
                         </ul>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                 <div class="row">
                     <div class="col-lg-5 col-lg-offset-1 col-md-6 col-md-offset-0">
                         <h1>DinnerCall </h1>
-                        <p><em>Bringing Prospective students and current students together</em> </p>
+                        <p><em>Critiquing and re-designing user interface</em> </p>
                     </div>
                     <div class="col-lg-5 col-lg-offset-0 col-md-5 col-md-offset-1 hidden-xs hidden-sm phone-holder">
                         <div class=""><img width="100%" src="images\portfolio\img\dinnercall.jpeg" class="img-rounded"></div>
@@ -61,9 +61,9 @@
                 <h1 class="text-center">Project Overview</h1></div>
         </div>
         <div class="row">
-            <div class="col-sm-6 col-sm-offset-1">
+            <div class="col-sm-10 col-sm-offset-1">
                 <h2>THE PROBLEM</h2>
-                <p>For the project – Usability Testing, we chose the DinnerCall mobile application.<a href="https://play.google.com/store/apps/details?id=com.betterretail.dinnercall&amp;hl=en">Download Application</a>DinnerCall is a mobile application aiding
+                <p>For the project – Usability Testing, we chose the DinnerCall mobile application.DinnerCall is a mobile application aiding
                     the users to find a healthy ready-to-eat meal from a near-by Deli. In words of our client, Chief Technical Officer, Mr. Akram Mnif, “Our main mission through this app is to convert fast food consumers to grocery shoppers and bring
                     families together.” </p>
                 <h2>THE SOLUTION</h2>
@@ -80,7 +80,7 @@
                     <li>Re-design the application</li>
                 </ul>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-10 col-sm-offset-1">
                 <div class="carousel slide" data-ride="carousel" id="carousel-1">
                     <div class="carousel-inner" role="listbox">
                         <div class="item"><img src="images\portfolio\img\1.jpg" alt="Slide Image"></div>
@@ -108,6 +108,11 @@
                     </ol>
                 </div>
             </div>
+
+                <div class="col-sm-4 col-sm-offset-4">
+                    <a class="btn btn-default btn-block btn-lg" role="button" href="https://play.google.com/store/apps/details?id=com.betterretail.dinnercall&amp;hl=en" target="_blank" style="background:rgb(27,27,27);color:white;padding:30px;width:100%;margin-top:20px;">Download Application</a>
+                </div>
+
         </div>
         <div class="row">
             <div class="col-md-12">
