--- a/musicalmoods.html
+++ b/musicalmoods.html
@@ -26,17 +26,17 @@
 
 <body>
     <div>
-        <div class="header-blue">
+        <div class="header-blue" style="background-image: url(Projects/MusicalMoods/mm.jpg);background-size: cover;">
             <nav class="navbar navbar-default navigation-clean-search">
                 <div class="container">
                     <div class="navbar-header"><a class="navbar-brand navbar-link" href="index.html">Swapnil Chandra</a>
                         <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                     </div>
                     <div class="collapse navbar-collapse" id="navcol-1">
-                        <ul class="nav navbar-nav">
+                        <ul class="nav navbar-nav pull-right">
                             <li class="" role="presentation" style="/*color:white;*/"><a href="dinnercall.html">DinnerCall </a></li>
-                            <li class="" role="presentation"><a href="EduAssist.html">EduAssist </a></li>
-                            <li class="active" role="presentation"><a href="#">MusicalMoods </a></li>
+                            <li class="" role="presentation"><a style="color: white;" href="EduAssist.html">EduAssist </a></li>
+                            <li class="active" role="presentation" style="background-color: dimgray; border-radius:5px; "><a style="color: white;" href="#">MusicalMoods </a></li>
                         </ul>
                     </div>
                 </div>
@@ -45,8 +45,8 @@
                 <div class="row">
                     <div class="col-lg-5 col-lg-offset-1 col-md-6 col-md-offset-0">
                         <h1>MusicalMoods </h1>
-                        <p><em>Discovering the bond between Music and Moods</em> </p>
-                        <button class="btn btn-default btn-lg action-button" type="button">Learn More</button>
+                        <p><em>Why and how does music influence our moods?</em> </p>
+                        <!--<button class="btn btn-default btn-lg action-button" type="button">Learn More</button>-->
                     </div>
                     <div class="col-lg-5 col-lg-offset-0 col-md-5 col-md-offset-1 hidden-xs hidden-sm phone-holder">
                         <div class=""><img src="Projects/MusicalMoods/dp.jpg" class="" width="100%" style="margin-top: 190px"></div>
@@ -61,22 +61,64 @@
                 <h1 class="text-center">Project Overview</h1></div>
         </div>
         <div class="row">
-            <div class="col-sm-6 col-sm-offset-1">
+            <div class="col-sm-10 col-sm-offset-1">
                 <h2>THE PROBLEM</h2>
                 <p>Music is a big part of our lives; however, we rarely ask WHY? Why do we need music? How does it change influence our thoughts, our moods? We chose this as our problem, and aimed to visually depict this problem. </p>
                 <h2>THE SOLUTION</h2>
-                <p>Music is a big part of our lives; however, we rarely ask WHY? Why do we need music? How does it change influence our thoughts, our moods? We chose this as our problem, and aimed to visually depict this problem. </p>
+                <p>We designed and implemented a scatterplot which plots 100 songs on the basis of the moods they may influence. We also created a radar graph to display the intensity of different moods a song influenced. It could also be used to compare 2 or more songs. Also, we allowed the users to play any song along with a visual depiction of the song. If the song/album the user wants to analyze is not there, he can search for it. The song/album is searched from the Spotify API and plotted on the scatterplot for the user.</p>
                 <h2>MY ROLE</h2>
-                <p>Researching the appropriate solution for our problem</p>
-                <p>Creating the low fidelity(Sketches) of our idea &nbsp; </p>
+                <ul>
+                    <li>Researching the appropriate solution for our problem.</li>
+                    <li>Creating the low fidelity(Sketches) of our idea.</li>
+                </ul>
                 <h2>TOOLS </h2>
-                <ul class="list-unstyled">
+                <ul class="">
                     <li>Balsamiq(low fidelity), </li>
                     <li>HTML, CSS, JS </li>
                     <li>D3 </li>
                 </ul>
             </div>
-            <div class="col-sm-4"><a class="btn btn-default btn-block btn-lg" role="button" href="https://onkarborg.github.io/MusicalMoods/" target="_blank" style="background:rgb(27,27,27);color:white;padding:30px;width:100%;margin-top:50%;">View Solution Here</a></div>
+
+            <div class="col-sm-10 col-sm-offset-1">
+                <div class="carousel slide" data-ride="carousel" id="carousel-2">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active"><img src="Projects/MusicalMoods/Folder_2/2.JPG" alt="Slide Image"></div>
+                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/3.JPG" alt="Slide Image"></div>
+                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/4.JPG" alt="Slide Image"></div>
+                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/5.JPG" alt="Slide Image"></div>
+                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/6.JPG" alt="Slide Image"></div>
+                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/7.JPG" alt="Slide Image"></div>
+                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/8.JPG" alt="Slide Image"></div>
+                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/9.JPG" alt="Slide Image"></div>
+                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/10.JPG" alt="Slide Image"></div>
+                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/11.JPG" alt="Slide Image"></div>
+                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/12.JPG" alt="Slide Image"></div>
+                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/13.JPG" alt="Slide Image"></div>
+                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/14.JPG" alt="Slide Image"></div>
+                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/15.JPG" alt="Slide Image"></div>
+                    </div>
+                    <div><a class="left carousel-control" href="#carousel-2" role="button" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-2" role="button"
+                                                                                                                                                                                                         data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">Next</span></a></div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-2" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-2" data-slide-to="1"></li>
+                        <li data-target="#carousel-2" data-slide-to="2"></li>
+                        <li data-target="#carousel-2" data-slide-to="3"></li>
+                        <li data-target="#carousel-2" data-slide-to="4"></li>
+                        <li data-target="#carousel-2" data-slide-to="5"></li>
+                        <li data-target="#carousel-2" data-slide-to="6"></li>
+                        <li data-target="#carousel-2" data-slide-to="7"></li>
+                        <li data-target="#carousel-2" data-slide-to="8"></li>
+                        <li data-target="#carousel-2" data-slide-to="9"></li>
+                        <li data-target="#carousel-2" data-slide-to="10"></li>
+                        <li data-target="#carousel-2" data-slide-to="11"></li>
+                        <li data-target="#carousel-2" data-slide-to="12"></li>
+                        <li data-target="#carousel-2" data-slide-to="13"></li>
+                        <li data-target="#carousel-2" data-slide-to="14"></li>
+                    </ol>
+                </div>
+            </div>
+            <div class="col-sm-4 col-sm-offset-4"><a class="btn btn-default btn-block btn-lg" role="button" href="https://onkarborg.github.io/MusicalMoods/" target="_blank" style="background:rgb(27,27,27);color:white;padding:30px;width:100%;margin-top:20px;">Musical Moods Website</a></div>
         </div>
         <div class="row">
             <div class="col-md-12">
@@ -164,45 +206,7 @@
                         conduct one. </li>
                 </ul>
             </div>
-            <div class="col-sm-10 col-sm-offset-1">
-                <div class="carousel slide" data-ride="carousel" id="carousel-2">
-                    <div class="carousel-inner" role="listbox">
-                        <div class="item active"><img src="Projects/MusicalMoods/Folder_2/2.JPG" alt="Slide Image"></div>
-                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/3.JPG" alt="Slide Image"></div>
-                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/4.JPG" alt="Slide Image"></div>
-                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/5.JPG" alt="Slide Image"></div>
-                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/6.JPG" alt="Slide Image"></div>
-                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/7.JPG" alt="Slide Image"></div>
-                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/8.JPG" alt="Slide Image"></div>
-                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/9.JPG" alt="Slide Image"></div>
-                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/10.JPG" alt="Slide Image"></div>
-                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/11.JPG" alt="Slide Image"></div>
-                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/12.JPG" alt="Slide Image"></div>
-                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/13.JPG" alt="Slide Image"></div>
-                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/14.JPG" alt="Slide Image"></div>
-                        <div class="item"><img src="Projects/MusicalMoods/Folder_2/15.JPG" alt="Slide Image"></div>
-                    </div>
-                    <div><a class="left carousel-control" href="#carousel-2" role="button" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-2" role="button"
-                        data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">Next</span></a></div>
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-2" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-2" data-slide-to="1"></li>
-                        <li data-target="#carousel-2" data-slide-to="2"></li>
-                        <li data-target="#carousel-2" data-slide-to="3"></li>
-                        <li data-target="#carousel-2" data-slide-to="4"></li>
-                        <li data-target="#carousel-2" data-slide-to="5"></li>
-                        <li data-target="#carousel-2" data-slide-to="6"></li>
-                        <li data-target="#carousel-2" data-slide-to="7"></li>
-                        <li data-target="#carousel-2" data-slide-to="8"></li>
-                        <li data-target="#carousel-2" data-slide-to="9"></li>
-                        <li data-target="#carousel-2" data-slide-to="10"></li>
-                        <li data-target="#carousel-2" data-slide-to="11"></li>
-                        <li data-target="#carousel-2" data-slide-to="12"></li>
-                        <li data-target="#carousel-2" data-slide-to="13"></li>
-                        <li data-target="#carousel-2" data-slide-to="14"></li>
-                    </ol>
-                </div>
-            </div>
+
         </div>
         <div class="row">
             <div class="col-md-12">
@@ -294,6 +298,17 @@
                         <li data-target="#carousel-3" data-slide-to="3"></li>
                     </ol>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="text-center">Key Learnings </h2></div>
+        </div>
+        <div class="row" style="padding-bottom: 50px;" >
+            <div class="col-sm-10 col-sm-offset-1">
+                <p>
+                    We learnt that frequency plays no factor in which mood a song influences! It is the energy and the valance which play the most crucial role!
+                </p>
             </div>
         </div>
     </div>
