--- a/EduAssist.html
+++ b/EduAssist.html
@@ -372,7 +372,7 @@
                     </ol>
                 </div>
             </div>
-            <div class="col-sm-8 col-sm-offset-2 hidden">
+            <div class="col-sm-8 col-sm-offset-2">
                 <p>High-Fidelity Prototype: </p>
                 <div class="carousel slide" data-ride="carousel" id="carousel-4">
                     <div class="carousel-inner" role="listbox">
@@ -496,7 +496,7 @@
             <div class="col-sm-10 col-sm-offset-1">
                 <ul>
                     <li>Participants faced a few problems with the navigation </li>
-                    <li>Participants complained that though the idea is great, the design could be made more intuitive </li>
+
                     <li>Many suggested to add a few help pages in the beginning of the app </li>
                 </ul>
                 <p>These along with the secondary requirements explained above, will be the future scope of this project. </p>
