--- a/dinnercall.html
+++ b/dinnercall.html
@@ -74,9 +74,9 @@
                 <ul class="list-unstyled">
                     <li>Evaluating the design of the app </li>
                     <li>Cognitive walkthrough </li>
+                    <li>Heuristic evaluation </li>
                     <li>Contextual Inquiries and Interviews </li>
                     <li>Affinity Diagram </li>
-                    <li>Heuristic evaluation </li>
                     <li>Re-design the application</li>
                 </ul>
             </div>
@@ -130,15 +130,15 @@
             <div class="col-sm-5 col-sm-offset-1">
                 <p>Round 1: We asked participants to perform the tasks and concluded: </p>
             </div>
-            <div class="col-sm-5">
+            <div class="col-sm-7 col-sm-offset-3">
                 <div class="carousel slide" data-ride="carousel" id="carousel-2">
                     <div class="carousel-inner" role="listbox">
-                        <div class="item"><img src="images\portfolio\img\1-1.jpg" alt="Slide Image"></div>
-                        <div class="item"><img src="images\portfolio\img\2-1.jpg" alt="Slide Image"></div>
-                        <div class="item"><img src="images\portfolio\img\3-1.jpg" alt="Slide Image"></div>
-                        <div class="item"><img src="images\portfolio\img\4-1.jpg" alt="Slide Image"></div>
-                        <div class="item active"><img src="images\portfolio\img\11-1.jpg" alt="Slide Image"></div>
-                        <div class="item"><img src="images\portfolio\img\12.jpg" alt="Slide Image"></div>
+                        <div class="item active"><img width="120%" src="images\portfolio\img\1-1.jpg" alt="Slide Image"></div>
+                        <div class="item"><img width="120%" src="images\portfolio\img\2-1.jpg" alt="Slide Image"></div>
+                        <div class="item"><img width="120%" src="images\portfolio\img\3-1.jpg" alt="Slide Image"></div>
+                        <div class="item"><img width="120%" src="images\portfolio\img\4-1.jpg" alt="Slide Image"></div>
+                        <div class="item"><img width="120%" src="images\portfolio\img\11-1.jpg" alt="Slide Image"></div>
+                        <div class="item"><img width="120%" src="images\portfolio\img\12.jpg" alt="Slide Image"></div>
                     </div>
                     <div><a class="left carousel-control" href="#carousel-2" role="button" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-2" role="button"
                         data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">Next</span></a></div>
@@ -155,7 +155,7 @@
             <div class="col-sm-5 col-sm-offset-1" style="margin-top:20px;">
                 <p>Round 2: Next we focused on some specific important problems that the application needed to change. </p>
             </div>
-            <div class="col-sm-5" style="margin-top:20px;">
+            <div class="col-sm-7 col-sm-offset-3" style="margin-top:20px;">
                 <div class="carousel slide" data-ride="carousel" id="carousel-3">
                     <div class="carousel-inner" role="listbox">
                         <div class="item active"><img src="images\portfolio\img\5-1.jpg" alt="Slide Image"></div>
@@ -165,15 +165,15 @@
                         <div class="item"><img src="images\portfolio\img\9-1.jpg" alt="Slide Image"></div>
                         <div class="item"><img src="images\portfolio\img\10-1.jpg" alt="Slide Image"></div>
                     </div>
-                    <div><a class="left carousel-control" href="#carousel-2" role="button" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-2" role="button"
+                    <div><a class="left carousel-control" href="#carousel-3" role="button" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-3" role="button"
                         data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">Next</span></a></div>
                     <ol class="carousel-indicators">
-                        <li data-target="#carousel-2" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-2" data-slide-to="1"></li>
-                        <li data-target="#carousel-2" data-slide-to="2"></li>
-                        <li data-target="#carousel-2" data-slide-to="3"></li>
-                        <li data-target="#carousel-2" data-slide-to="4"></li>
-                        <li data-target="#carousel-2" data-slide-to="5"></li>
+                        <li data-target="#carousel-3" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-3" data-slide-to="1"></li>
+                        <li data-target="#carousel-3" data-slide-to="2"></li>
+                        <li data-target="#carousel-3" data-slide-to="3"></li>
+                        <li data-target="#carousel-3" data-slide-to="4"></li>
+                        <li data-target="#carousel-3" data-slide-to="5"></li>
                     </ol>
                 </div>
             </div>
@@ -189,7 +189,7 @@
         </div>
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
-                <p>Based on our research and contextual inquiries, we developed our persona, Alice Shah. Throughout the rest of the project, we focused our design designs based on how Alice would react to them.&nbsp; </p>
+                <p>Based on our research and contextual inquiries, we developed our persona, Lucy Lane. Throughout the project, we focused our designs based on how Lucy would interact with them.</p>
                 <div class="row">
                     <div class="col-sm-5">
                         <img src="Projects/Dinnercall/persona.jpg">
@@ -197,9 +197,9 @@
                     <div class="col-sm-7">
                         <p><strong>Our Persona:</strong> Lucy Lane </p>
                         <p><strong>Residence:</strong> NYC, USA </p>
-                        <p><strong>Occupation:</strong> Real Estate&nbsp; </p>
+                        <p><strong>Occupation:</strong> Real Estate</p>
                         <p><strong>Bio:</strong> Lucy is in her mid 30s, and is constantly working. Lucy participates in a bi-weekly yoga class, brings her kids to their practices and trainings, and in whatever spare time she has left likes to read. Lucy
-                            is well educated and also likes to think of herself as “techy”. She uses her mobile phone daily, she thinks too much.&nbsp; </p>
+                            is well educated and also likes to think of herself as “techy”. She uses her mobile phone daily, she thinks too much.</p>
                     </div>
                 </div>
                 <div class="row">
